--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -23,46 +23,12 @@ template:
     ganalytics: UA-000000-01
 
 reference:
-  - title: Database construction
-    desc: Construct in-house or public MS2 spectra database.
+  - title: Functions
+    desc: Functions in tidymas
     contents:
-    - databaseConstruction
-    - rtCor4database
-    - get_ms2_spectrum
-    
-  - title: Metabolite identification
-    desc: Metabolite identification based on MS1 and MS2 databases.
-    contents:
-    - which_has_identification
-    - trans_to_new_style
-    - ms2plot
-    - identify_single_peak
-    - identify_metabolites_params
-    - identify_metabolites
-    - identify_metabolites_all
-    - get_parameters
-    - get_ms2_spectrum_from_object
-    - get_identification_table
-    - get_iden_info
-    - filter_identification
-    
-  - title: Data
-    desc: Some data embed in tidymass
-    contents:
-    - hilic.pos
-    - hilic.neg
-    - rp.pos
-    - rp.neg
-    - msDatabase_rplc0.0.2
-    - msDatabase_hilic0.0.2
-    - annotate_result
-
-  - title: Other functions
-    desc: Other usefull functions in tidymass
-    contents:
-    - readMGF
-    - readMSP
-    - readMZXML
+    - install_tidymass
+    - logo
+    - tidymass_logo
     - tidymass
 
 navbar:
@@ -75,30 +41,29 @@ navbar:
     articles:
       text: Help documents
       menu:
-      - text: "Brief introduction"
-      - text: Brief introduction
-        href: articles/tidymass.html
-      - text: "Database construction"
-      - text: Database construction
-        href: articles/database_construction.html
-      - text: Public databases for tidymass
-        href: articles/public_databases.html
-      - text: -------
-      - text: "Metabolite identification"
-      - text: Metabolite identification using MS1 database
-        href: articles/metabolite_annotation_using_MS1.html
-      - text: Metabolite identification using MS2 database
-        href: articles/metabolite_annotation_using_MS2.html
-      - text: Metabolite identification using multiple databases
-        href: articles/multiple_databases.html
-      - text: Identify single peak  
-        href: articles/identify_single_peak.html
-      - text: -------
-      - text: "Others"
-      - text: Other usefull tools
-        href: articles/other_tools.html
-      - text: Test
-        href: https://www.tidyverse.org/blog/2018/12/readxl-1-2-0/
+      - text: "metflow"
+      - text: Web Server for Metabolomics Data Cleaning and Differential Metabolite Discovery
+        href: http://metflow.zhulab.cn/
+      - text: --------
+      - text: "metflow2"
+      - text: Mass spectrometry raw data processing and data cleaning
+        href: https://jaspershen.github.io/metflow2/
+      - text: --------
+      - text: "MetNormalizer"
+      - text: Metabolomimcs data normalization
+        href: https://jaspershen.github.io/MetNormalizer/
+      - text: --------
+      - text: "metID"
+      - text: Database construction and metabolite annotation
+        href: https://jaspershen.github.io/metID/
+      - text: --------
+      - text: "MetDNA"
+      - text: Metabolite identification and Dysregulated Network Analysis
+        href: http://metdna.zhulab.cn/
+      - text: --------
+      - text: "lipidflow"
+      - text: Absolute quantification for lipidomics
+        href: https://jaspershen.github.io/lipidflow/
     twitter:
       icon: "fab fa-twitter fa-lg"
       href: https://twitter.com/JasperShen1990
