--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,30 @@
 Package: tidymass
-Title: R packages for mass spectrometry data processing and analysis.
+Title: R packages for mass spectrometry data processing and analysis
 Version: 0.0.1
-Authors@R: person(given = "Xiaotao",
+Authors@R: c(
+    person(given = "Xiaotao",
            family = "Shen",
            role = c("aut", "cre"),
            email = "shenxt@stanford.edu",
-           comment = c(ORCID = "https://orcid.org/0000-0002-9608-9964"))
+           comment = c(ORCID = "0000-0002-9608-9964")),
+        person(given = "Chuchu",
+           family = "Wang",
+           role = c("ctb")),
+        person(given = "Si",
+           family = "Wu",
+           role = c("ctb")),
+           person(given = "Hanyah",
+           family = "Zackriah",
+           role = c("ctb")),
+           person(given = "Liang",
+           family = "Liang",
+           role = c("ctb")),
+           person(given = "Songjie",
+           family = "Chen",
+           role = c("ctb"))
+           )
 Description: The 'tidymass' package is a collection of several packages for Mass Spectrometry data processing and analysis, now it contains metID, metflow2, metDNA ,metPath, and lipidflow.
-License: MIT
+License: MIT + file LICENSE
 URL: https://github.com/jaspershen/tidymass
 BugReports: https://github.com/jaspershen/tidymass/issues
 Encoding: UTF-8
@@ -19,4 +36,5 @@ Depends:
 Imports: 
     crayon,
     devtools,
-    purrr
+    purrr,
+    stringr
