--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,8 +42,9 @@ Imports:
     metflow2 (>= 0.1.1),
     metID (>= 0.4.1),
     tinyTools (>= 0.1.2),
-    sxtTools (>= 0.99.1)
-Remotes:  
+    sxtTools (>= 0.99.1),
+    cli
+Remotes: 
     jaspershen/metflow2,
     jaspershen/metID,
     jaspershen/tinyTools,
