--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,12 +42,10 @@ Imports:
     metflow2 (>= 0.1.1),
     metID (>= 0.4.1),
     tinyTools (>= 0.1.2),
-    sxtTools (>= 0.99.1),
     cli,
     magrittr,
     rstudioapi
 Remotes: 
     jaspershen/metflow2,
     jaspershen/metID,
-    jaspershen/tinyTools,
-    jaspershen/sxtTools
+    jaspershen/tinyTools
