--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,10 @@
-pandoc: 2.11.2
+pandoc: 2.11.4
 pkgdown: 1.6.1
 pkgdown_sha: ~
-articles: {}
-last_built: 2021-02-21T23:54Z
+articles:
+  contact_us: contact_us.html
+  tidymass: tidymass.html
+last_built: 2021-03-03T21:50Z
 urls:
   reference: https://jaspershen.github.io/tidymass//reference
   article: https://jaspershen.github.io/tidymass//articles
