--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,6 +1,6 @@
 destination: docs
 
-url: https://jaspershen.github.io/tidymass/
+url: https://tidymass.github.io/tidymass/
 
 home:
   strip_header: false
