--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,8 @@
 
 S3method(print,tidymass_conflicts)
 S3method(print,tidymass_logo)
-export(install_tidymass)
 export(tidymass_conflicts)
+export(tidymass_install)
 export(tidymass_logo)
 export(tidymass_packages)
 importFrom(devtools,install_git)
