--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,8 +3,9 @@ pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
   contact_us: contact_us.html
+  tidymass_install: tidymass_install.html
   version0.4.0: version0.4.0.html
-last_built: 2021-12-21T07:46Z
+last_built: 2021-12-23T05:27Z
 urls:
   reference: https://tidymass.github.io/tidymass//reference
   article: https://tidymass.github.io/tidymass//articles
