--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,9 +3,11 @@ pkgdown: 2.0.1
 pkgdown_sha: ~
 articles:
   contact_us: contact_us.html
+  faq: faq.html
+  more_software: more_software.html
   tidymass_install: tidymass_install.html
   version0.4.0: version0.4.0.html
-last_built: 2021-12-24T08:39Z
+last_built: 2021-12-24T20:26Z
 urls:
   reference: https://tidymass.github.io/tidymass/reference
   article: https://tidymass.github.io/tidymass/articles
