--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,15 @@
 S3method(print,tidymass_conflicts)
 S3method(print,tidymass_logo)
 export(tidymass_conflicts)
+export(tidymass_deps)
 export(tidymass_install)
 export(tidymass_logo)
 export(tidymass_packages)
+export(tidymass_sitrep)
+export(tidymass_update)
 importFrom(devtools,install_git)
 importFrom(devtools,install_github)
+importFrom(dplyr,filter)
 importFrom(magrittr,"%>%")
+importFrom(rlang,is_installed)
+importFrom(tibble,tibble)
