--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,15 @@ summary
 logo.txt
 
 inst/doc
+
+vignettes/figures/
+vignettes/figures
+
+vignettes/mzxml_ms2_data/
+vignettes/mzxml_ms2_data
+
+vignettes/mzxml_ms1_data/
+vignettes/mzxml_ms1_data
+
+vignettes/sample_info/
+vignettes/sample_info
