--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,12 @@
 # produced vignettes
 vignettes/*.html
 vignettes/*.pdf
+vignettes/*.png
+vignettes/*_cache
+vignettes/example
+vignettes/demo_data
+vignettes/example/
+vignettes/demo_data/
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
 # knitr and R markdown default cache directories
