--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -13,6 +13,8 @@ vignettes/*_cache
 vignettes/*.png
 vignettes/example
 vignettes/demo_data
+vignettes/example/
+vignettes/demo_data/
 vignettes/
 
 
