--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,15 @@ export(tidymass_logo)
 export(tidymass_packages)
 export(tidymass_sitrep)
 export(tidymass_update)
+import(masscleaner)
+import(massconverter)
+import(massdataset)
+import(massprocesser)
+import(massqc)
+import(massstat)
+import(masstools)
+import(metid)
+import(metpath)
 importFrom(devtools,install_git)
 importFrom(devtools,install_github)
 importFrom(dplyr,filter)
