--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -7,12 +7,13 @@ articles:
   data_convert: data_convert.html
   data_preparation: data_preparation.html
   demo_data: demo_data.html
+  explore_data: explore_data.html
   faq: faq.html
   more_software: more_software.html
   raw_data_processing: raw_data_processing.html
   tidymass_install: tidymass_install.html
   version0.4.0: version0.4.0.html
-last_built: 2022-01-17T00:18Z
+last_built: 2022-01-17T05:19Z
 urls:
   reference: https://tidymass.github.io/tidymass/reference
   article: https://tidymass.github.io/tidymass/articles
