--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -9,11 +9,12 @@ articles:
   demo_data: demo_data.html
   explore_data: explore_data.html
   faq: faq.html
+  metabolite_annotation: metabolite_annotation.html
   more_software: more_software.html
   raw_data_processing: raw_data_processing.html
   tidymass_install: tidymass_install.html
   version0.4.0: version0.4.0.html
-last_built: 2022-01-17T08:13Z
+last_built: 2022-01-18T17:50Z
 urls:
   reference: https://tidymass.github.io/tidymass/reference
   article: https://tidymass.github.io/tidymass/articles
