--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -36,3 +36,6 @@ vignettes/sample_info
 
 vignettes/metabolite_annotation/
 vignettes/metabolite_annotation
+
+vignettes/statiscal_analysis/
+vignettes/statiscal_analysis
