--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -7,6 +7,7 @@ articles:
   data_convert: data_convert.html
   data_preparation: data_preparation.html
   demo_data: demo_data.html
+  docker: docker.html
   explore_data: explore_data.html
   faq: faq.html
   metabolite_annotation: metabolite_annotation.html
@@ -16,7 +17,7 @@ articles:
   statistical_analysis: statistical_analysis.html
   tidymass_install: tidymass_install.html
   version0.4.0: version0.4.0.html
-last_built: 2022-02-04T19:16Z
+last_built: 2022-02-19T06:32Z
 urls:
   reference: https://tidymass.github.io/tidymass/reference
   article: https://tidymass.github.io/tidymass/articles
