--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,11 @@
 
 S3method(print,tidymass_conflicts)
 S3method(print,tidymass_logo)
+export(check_tidymass_version)
 export(tidymass_conflicts)
-export(tidymass_deps)
-export(tidymass_install)
 export(tidymass_logo)
 export(tidymass_packages)
-export(tidymass_sitrep)
-export(tidymass_update)
+export(update_tidymass)
 import(masscleaner)
 import(massdataset)
 import(massprocesser)
@@ -17,9 +15,15 @@ import(massstat)
 import(masstools)
 import(metid)
 import(metpath)
-importFrom(devtools,install_git)
-importFrom(devtools,install_github)
 importFrom(dplyr,filter)
 importFrom(magrittr,"%>%")
-importFrom(rlang,is_installed)
-importFrom(tibble,tibble)
+importFrom(purrr,compact)
+importFrom(purrr,imap)
+importFrom(purrr,keep)
+importFrom(purrr,map)
+importFrom(purrr,map2)
+importFrom(purrr,map2_chr)
+importFrom(remotes,install_git)
+importFrom(remotes,install_github)
+importFrom(remotes,install_gitlab)
+importFrom(rvcheck,check_github)
