--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,6 @@ vignettes/metabolite_annotation
 
 vignettes/statiscal_analysis/
 vignettes/statiscal_analysis
+
+vignettes/statistical_analysis
+vignettes/statistical_analysis/
